HistoryCommandsExecutor - it's bridge between history and commands

--- a/HistoricalReactiveCommand/HistoricalReactiveCommand.csproj
+++ b/HistoricalReactiveCommand/HistoricalReactiveCommand.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="ReactiveUI" Version="11.5.26" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\Extensions\" />
+  </ItemGroup>
+
 </Project>
