--- a/HistoricalReactiveCommand/HistoricalReactiveCommand.csproj
+++ b/HistoricalReactiveCommand/HistoricalReactiveCommand.csproj
@@ -4,10 +4,17 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
+    <PackageProjectUrl>https://github.com/RomanSoloweow/HistoricalReactiveCommand</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/RomanSoloweow/HistoricalReactiveCommand</RepositoryUrl>
+    <PackageTags>ReactiveUI ReactiveCommand HistoricalCommand</PackageTags>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <AssemblyVersion>0.5.0.0</AssemblyVersion>
+    <FileVersion>0.0.0.0</FileVersion>
+    <Version>0.5.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ReactiveUI" Version="11.5.26" />
+    <PackageReference Include="ReactiveUI" Version="11.5.35" />
   </ItemGroup>
 
 </Project>
