--- a/HistoricalReactiveCommand/HistoricalReactiveCommand.csproj
+++ b/HistoricalReactiveCommand/HistoricalReactiveCommand.csproj
@@ -11,6 +11,7 @@
     <AssemblyVersion>0.5.0.0</AssemblyVersion>
     <FileVersion>0.0.0.0</FileVersion>
     <Version>0.5.0</Version>
+    <PackageVersion>0.5.1</PackageVersion>
   </PropertyGroup>
 
   <ItemGroup>
