--- a/HistoricalReactiveCommand/HistoricalReactiveCommand.csproj
+++ b/HistoricalReactiveCommand/HistoricalReactiveCommand.csproj
@@ -4,18 +4,19 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>9</LangVersion>
     <Nullable>enable</Nullable>
-    <PackageProjectUrl>https://github.com/RomanSoloweow/HistoricalReactiveCommand</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/RomanSoloweow/HistoricalReactiveCommand</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/RomanSoloweow/HistoricalReactiveCommand/tree/OtherHistoryEntryType</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/RomanSoloweow/HistoricalReactiveCommand/tree/OtherHistoryEntryType</RepositoryUrl>
     <PackageTags>ReactiveUI ReactiveCommand HistoricalCommand</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <AssemblyVersion>0.5.0.0</AssemblyVersion>
     <FileVersion>0.0.0.0</FileVersion>
     <Version>0.5.0</Version>
-    <PackageVersion>0.5.4.2</PackageVersion>
+    <PackageVersion>0.6.0.0</PackageVersion>
+    <PackageId>HistoricalReactiveCommandCustom</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ReactiveUI" Version="16.3.10" />
+    <PackageReference Include="ReactiveUI" Version="18.3.1" />
   </ItemGroup>
 
 </Project>
